[package]
name = "kubectl-decodesecret"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1" }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
